# rustplotlib

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  benchmark_results.csv  pyproject.toml
.github/workflows/: ci.yml
dados/Data/: PerfisTemp_rustplotlib.py
docs/superpowers/plans/: 2026-04-04-jupyter-and-event-foundation.md
python/rustplot/: __init__.py  pyplot.py
python/rustplotlib/: __init__.py  animation.py  callback_registry.py  cm.py  collections.py  colors.py  cycler.py  dates.py  events.py  figure.py  font_manager.py  gridspec.py  lines.py  patches.py  patheffects.py  pyplot.py  pyplot.pyi  spines.py  text.py  ticker.py  transforms.py  widgets.py
python/rustplotlib/axes/: __init__.py
python/rustplotlib/backends/: __init__.py  backend_base.py  backend_inline.py  backend_pdf.py  backend_tk.py  backend_webagg.py
python/rustplotlib/mpl_toolkits/: __init__.py
python/rustplotlib/mpl_toolkits/axes_grid1/: __init__.py  axes_divider.py
python/rustplotlib/mpl_toolkits/mplot3d/: __init__.py
python/rustplotlib/style/: __init__.py
src/: axes.rs  axes3d.rs  colors.rs  figure.rs  lib.rs  mathtext.rs  parse.rs  projection3d.rs  projections.rs  svg_renderer.rs  text.rs  ticker.rs  transforms.rs  window.rs
src/artists/: arrow.rs  bar.rs  bar3d.rs  barh.rs  boxplot.rs  broken_barh.rs  colorbar_artist.rs  contour.rs  contour3d.rs  errorbar.rs  eventplot.rs  fancy_arrow.rs  fill_between.rs  fill_betweenx.rs  fill_polygon.rs  hexbin.rs  hist.rs  image.rs  legend.rs  line2d.rs  line3d.rs  line_collection.rs  mod.rs  patches.rs  pcolormesh.rs  pie.rs  quiver.rs  radar.rs  sankey.rs  scatter.rs  scatter3d.rs  stem.rs  step.rs  streamplot.rs  surface3d.rs  trisurf3d.rs  violin.rs  widget.rs  wireframe3d.rs
tests/: test_3d.py  test_advanced_customization.py  test_axes_figure_api.py  test_backend_tk.py  test_benchmark.py  test_colorbar_annotations.py  test_colormaps.py  test_colors.py  test_events.py  test_figure.py  test_jupyter_repr.py  test_layout.py  test_markers.py  test_new_features.py  test_new_features2.py  test_output_formats.py  test_phase6_7.py  test_phase8.py  test_phase9_features.py  test_polar.py  test_pyplot.py  test_regression.py  test_spectral_features.py  test_spine_positioning.py  test_styles.py  test_ticker.py  test_transforms.py  test_triangulation.py  test_v3_features.py  test_v5_features.py  test_widgets.py
