[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rustplot"
version = "0.1.0"
description = "Matplotlib drop-in replacement powered by Rust"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "rustplot._rustplot"
features = ["pyo3/extension-module"]
