[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rustplotlib"
version = "2.0.0"
description = "Matplotlib drop-in replacement powered by Rust"
requires-python = ">=3.9"
dependencies = ["numpy"]
license = {text = "MIT"}
readme = "README.md"
keywords = ["matplotlib", "plotting", "visualization", "rust", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/Thi4gon/rustplotlib"
Repository = "https://github.com/Thi4gon/rustplotlib"
Issues = "https://github.com/Thi4gon/rustplotlib/issues"

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "rustplotlib._rustplotlib"
features = ["pyo3/extension-module"]
